# ethercrab

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  EEPROM-PROTO.rs  FAQ.md  Justfile  NOTES.md  PR_DESCRIPTION.md  README.md  README.tpl  SPECNOTES.md  TODO.md  clippy.toml  dc-align.plot  dc-pd-valentin.plot  dc-pd.plot  embassy-size.sh  release.toml  repo-stats.sh  rust-toolchain.toml  rustfmt.toml  sizes.csv
.cargo/: config.toml
.circleci/: config.yml
.github/: FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature.md  issue.md
.github/workflows/: matrix-bot.yml
benches/: frame.rs  loopback.rs  pdu_loop.rs
doc/: Diagrams.monopic  README.md  windows-tuning.md
ds402/: Cargo.toml  Justfile  README.md
ds402/src/: main.rs
ds402/src/c5e/: control.rs  mod.rs  power.rs  status.rs
dumps/: rs-example-sii-el2004.pcapng  soem-dual-lan9252.pcapng  soem-slaveinfo-ek1100-2-lan9252.txt  soem-slaveinfo-ek1100-el1004.pcapng  soem-slaveinfo-ek1100-only.pcapng  soem-slaveinfo-el7-sdo.txt  twincat-run-ek1100-el1004.pcapng  twincat-scan-boxes.pcapng  twincat-scan-devices-2.pcapng  twincat-scan-devices.pcapng
dumps/eeprom/: akd.hex  akd_null_strings.hex  ek1100.hex  el2828.hex  el2828_soem.hex  el2889.hex  el2889_soem.hex
ethercrab-derive/: Cargo.toml  README.md
ethercrab-derive/src/: derive_enum.rs  derive_struct.rs  generate_enum.rs  generate_struct.rs  help.rs  lib.rs  parse_struct.rs
ethercrab-derive/tests/: derive.rs  pack.rs  unpack.rs
ethercrab-derive/ui/: union.stderr
ethercrab-wire/: CHANGELOG.md  Cargo.toml  README.md  README.tpl  out.rs
ethercrab-wire-derive/: CHANGELOG.md  Cargo.toml  README.md  README.tpl
ethercrab-wire-derive/benches/: derive-enum.rs  derive-large.rs  derive-struct.rs
ethercrab-wire-derive/src/: generate_enum.rs  generate_struct.rs  help.rs  lib.rs  parse_enum.rs  parse_struct.rs
ethercrab-wire-derive/tests/: irl.rs  unpack.rs
ethercrab-wire-derive/ui/: enum-isize.rs  enum-isize.stderr  enum-usize.rs  enum-usize.stderr  union.rs  union.stderr
ethercrab-wire/src/: error.rs  impls.rs  lib.rs
ethercrab-wire/tests/: auto-sizes.rs  heapless.rs  irl.rs  pack.rs  signed-enums.rs  std.rs  unpack.rs
ethercrab_derive/: Cargo.toml
ethercrab_derive/src/: lib.rs
ethercrab_derive/tests/: derive.rs
ethercrab_derive/ui/: union.rs
examples/: akd-pdos.rs  akd.rs  akd.rs.disabled  al-monitor.rs  autoconfig.rs  bbqueue.rs  brd-waker-2.rs  brd-waker-3.rs  brd-waker.rs  c5-e.rs  concurrent-sdo-read.rs  dc-lan9252-groups.rs  dc.rs  detect-slaves.rs  discover.rs  drift.rs  ds402.rs  dump-eeprom.rs  ec400.rs  ec400_fields.rs  eeprom-dump.rs  ek1100.rs  el2004.rs  el3702-oversampling.rs  el3702.rs  esi.rs  eth-frame.rs  garbage-ethercat-frame.rs  glommio.rs  io-uring.rs  jitter.rs  kistler_5074b.rs  mailbox_gateway.rs  mailbox_gateway_core.rs  marc.rs  multiple-groups.rs  no-hook-fn.rs  pdi-and-sdo.rs  pdi.rs  performance.rs  (+20 more)
examples/embassy-stm32/: Cargo.toml  README.md  rust-toolchain.toml
examples/embassy-stm32/.cargo/: config.toml
examples/embassy-stm32/src/: main.rs
examples/rtic-stm32/: Cargo.toml
examples/rtic-stm32/.cargo/: config
examples/rtic-stm32/src/: common.rs  main.rs
examples/stm32/: Cargo.toml  build.rs
examples/stm32/src/: main.rs
src/: al_control.rs  al_status.rs  al_status_code.rs  base_data_types.rs  client.rs  client_config.rs  client_inner.rs  coe.rs  command.rs  dc.rs  derive.rs  dl_status.rs  ds402.rs  eeprom.rs  error.rs  ethernet.rs  fmmu.rs  fmt.rs  frame.rs  generate.rs  internals.rs  lib.rs  log.rs  mailbox.rs  maindevice.rs  maindevice_config.rs  pdi.rs  pdu.rs  pdu2.rs  pdu_data.rs  pdu_loop.rs  register.rs  sdo.rs  sii.rs  slave.rs  slave_group.rs  slave_state.rs  std.rs  subdevice_state.rs  sync_manager_channel.rs  (+3 more)
src/coe/: abort_code.rs  mod.rs  services.rs
src/command/: mod.rs  reads.rs  writes.rs
src/convenience/: field.rs  mod.rs  sdo.rs
src/eeprom/: device_provider.rs  device_reader.rs  file_provider.rs  file_reader.rs  mod.rs  reader.rs  types.rs
src/esi/: info.rs  mod.rs
src/mailbox/: mod.rs
src/pdu_loop/: frame.rs  frame_box.rs  frame_element.rs  frame_header.rs  mod.rs  pdu.rs  pdu2.rs  pdu_flags.rs  pdu_frame.rs  pdu_frame2.rs  pdu_header.rs  pdu_rx.rs  pdu_tx.rs  storage.rs
src/slave/: configuration.rs  configurator.rs  dc.rs  eeprom.rs  mod.rs  pdi.rs  ports.rs  sdo.rs  slave_client.rs  types.rs
src/slave_group/: configurator.rs  container.rs  group_id.rs  group_ref.rs  group_slave.rs  handle.rs  iterator.rs  mod.rs  slave_storage.rs
src/std/: io_uring.rs  io_uring_one_cycle.rs  mod.rs  not_linux.rs  unix.rs  windows.rs  xdp.rs
tests/: README.md  init-must-be-send.rs  issue-255.miri-cache  issue-255.rs  no_reborrow.pcapng  no_reborrow.rs  replay-dc.pcapng  replay-dc.rs  replay-ek1100-alias-address.pcapng  replay-ek1100-alias-address.rs  replay-ek1100-el2828-el2889-no-reborrow.pcapng  replay-ek1100-el2828-el2889-no-reborrow.rs  replay-ek1100-el2828-el2889.pcapng  replay-ek1100-el2828-el2889.rs  replay-ek1100-el2828-el2889.rs.disabled  replay-ek1914-el3004-configure.pcapng  replay-ek1914-el3004-configure.rs  replay-ek1914-el3004-mailbox.pcapng  replay-ek1914-el3004-mailbox.rs  replay-ek1914-no-complete-access.pcapng  replay-ek1914-no-complete-access.rs  replay-ek1914-segmented-upload.pcapng  replay-ek1914-segmented-upload.rs  replay-issue-255.pcapng  replay-issue-255.rs  replay-issue-49.pcapng  replay-issue-49.rs  replay-mailbox-el3004.pcapng  replay-mailbox-el3004.rs  replay-mailbox-el6910.pcapng  replay-mailbox-el6910.rs  replay-no-complete-access.pcapng  replay-no-complete-access.rs  replay-no-reborrow.pcapng  replay-no-reborrow.rs  replay-sdo-error.pcapng  replay-sdo-error.rs  replay-segmented-upload.pcapng  replay-segmented-upload.rs  util.rs
wireshark/: rs-detect-slaves-ek1100-el1004.pcapng  rs-detect-slaves-ek1100-only.pcapng  soem-single-lan9252.pcapng  soem-slaveinfo-2-el2004.txt  soem-slaveinfo-2-lan9252.txt  soem-slaveinfo-akd.pcapng  soem-slaveinfo-no-slaves.pcapng  twincat-akd-nc-mode.pcapng
(+34 files in other folders)
