[package]
name = "ds402"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
env_logger = "0.11.3"
ethercrab = { version = "0.4.1", path = ".." }
ethercrab-wire = { version = "0.1.4", path = "../ethercrab-wire" }
futures-lite = "2.3.0"
log = "0.4.21"
signal-hook = "0.3.17"
smol = "2.0.0"
ta = "0.5.0"
thread-priority = "0.16.0"
tokio = { version = "1.33.0", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }
