[package]
name = "ethercrab-wire-derive"
version = "0.1.0"
edition = "2021"
categories = ["science::robotics", "no-std", "network-programming"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/ethercrab-rs/ethercrab"
documentation = "https://docs.rs/ethercrab-derive"
description = "Derive macros for EtherCrab"
resolver = "2"
keywords = ["ethercat", "ethercrab"]

[lib]
proc-macro = true
# Explicitly written here to make cargo-readme happy <https://github.com/webern/cargo-readme/issues/32>
path = "src/lib.rs"

[dependencies]
proc-macro2 = "1.0.73"
quote = "1.0.34"
syn = { version = "2.0.44", features = ["full"] }

[dev-dependencies]
trybuild = "1.0.86"
ethercrab-wire = { version = "0.1.0", path = "../ethercrab-wire" }
syn = { version = "2.0.44", features = ["full", "extra-traits"] }
