[package]
name = "ethercrab-wire"
version = "0.0.0"
edition = "2021"
categories = ["science::robotics", "no-std", "network-programming"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/ethercrab-rs/ethercrab"
documentation = "https://docs.rs/ethercrab-wire"
description = "On-the-wire tools for the EtherCrab crate"
keywords = ["no-std", "ethercat", "ethercrab"]
resolver = "2"
rust-version = "1.75"

[dependencies]
defmt = { version = "0.3.5", optional = true }
ethercrab-wire-derive = { version = "0.0.0", path = "../ethercrab-wire-derive" }
heapless = { version = "0.8.0", default-features = false }

[features]
std = []
defmt-03 = ["dep:defmt", "heapless/defmt-03"]
