[package]
name = "ethercrab-stm32-embassy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethercrab = { path = "../..", default-features = false, features = ["defmt"] }

defmt = "0.3"
defmt-rtt = "0.4.0"
cortex-m = { version = "0.7.6", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
embedded-io = "0.6.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
static_cell = { version = "1.1", features = ["nightly"] }
smoltcp = { version = "0.11.0", features = ["defmt"], default-features = false }

embassy-sync = { version = "0.5.0", features = ["defmt"] }
embassy-executor = { version = "0.4.0", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "integrated-timers",
    "arch-cortex-m",
    # TODO: Use stable when type_alias_impl_trait is stabilised.
    "nightly",
] }
embassy-time = { version = "0.2.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "tick-hz-1_000_000",
] }
embassy-stm32 = { version = "0.1.0", features = [
    "defmt",
    "stm32f429zi",
    "memory-x",
    "time-driver-any",
] }
embassy-net = { version = "0.2.1", features = [
    "defmt",
    "tcp",
    "dhcpv4",
    "medium-ethernet",
] }
embassy-net-driver = { version = "0.2.0", features = ["defmt"] }

[profile.release]
debug = 2
opt-level = "z"
lto = true
codegen-units = 1

[patch.crates-io]
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", rev = "eebfee189a592427423d3a3ad22132d59926a0e8" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "eebfee189a592427423d3a3ad22132d59926a0e8" }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "eebfee189a592427423d3a3ad22132d59926a0e8" }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy.git", rev = "eebfee189a592427423d3a3ad22132d59926a0e8" }
embassy-net = { git = "https://github.com/embassy-rs/embassy.git", rev = "eebfee189a592427423d3a3ad22132d59926a0e8" }
embassy-net-driver = { git = "https://github.com/embassy-rs/embassy.git", rev = "eebfee189a592427423d3a3ad22132d59926a0e8" }
