[package]
name = "ethercrab-stm32-embassy"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
ethercrab = { path = "../..", default-features = false, features = ["defmt"] }

defmt = "0.3"
defmt-rtt = "0.4.0"
cortex-m = { version = "0.7.6", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.0"
embedded-hal = "1.0.0"
embedded-io = "0.6.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
static_cell = { version = "2.0.0" }
smoltcp = { version = "0.11.0", features = ["defmt"], default-features = false }
embassy-executor = { version = "0.6.0", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "integrated-timers",
    "arch-cortex-m",
    "task-arena-size-81920",
] }
embassy-time = { version = "0.3.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "tick-hz-1_000_000",
] }
embassy-stm32 = { version = "0.1.0", features = [
    "defmt",
    "stm32f429zi",
    "memory-x",
    "time-driver-any",
] }
embassy-net = { version = "0.4.0", features = [
    "defmt",
    "tcp",
    "dhcpv4",
    "medium-ethernet",
] }
embassy-net-driver = { version = "0.2.0", features = ["defmt"] }

[profile.release]
debug = 2
opt-level = "z"
lto = true
codegen-units = 1
